Fix spacing on exhibition cta

--- a/resources/sass/_extend-bootstrap.scss
+++ b/resources/sass/_extend-bootstrap.scss
@@ -1,3 +1,7 @@
 .mt-auto {
     margin-top: auto;
 }
+
+.mb-4-5 {
+    margin-bottom: 28px;
+}
